# golden-arch

./: .gitignore  manage.py  pyproject.toml
conference/: forms.py  models.py  schema.py
conference/migrations/: 0001_initial.py  0002_auto_20200314_1115.py
golden_arch/: asgi.py  patch.py  schema.py  settings.py  urls.py  wsgi.py
templates/: login.html
user/: admin.py  forms.py  models.py  schema.py  urls.py  views.py
user/migrations/: 0001_initial.py
