[tool.poetry]
name = "golden-arch"
version = "0.1.0"
description = ""
authors = ["aochujie <weditor@163.com>"]

[[tool.poetry.source]]
name = 'aliyun'
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.3"
graphene = "^2.1.8"
graphene-django = "^2.8.2"
django-filter = "^2.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
